syntax = "proto3";

package userPreference;

service UserPreferenceGrpcService{
	rpc GetById(GetByIdRequest) returns (GetUserPreferenceByIdResult);
}

message GetByIdRequest{
	string Id = 1;
}
message GetUserPreferenceByIdResult{
	UserPreferenceResponse UserPreferenceDto = 1;
}
message UserPreferenceResponse{
	string Id = 1;
	string UserId = 2;
	repeated UserDtoPreference Preference = 3;
}
message UserDtoPreference{
	ChannelType channel = 1;
	bool IsOptOut = 2;
}
enum ChannelType{
	INAPP = 0;
	EMAIL = 1;
	PUSH = 2;
}
